<resources>
    <string name="app_name">ProgramLessons</string>
    <string name="login_name_hint">login name</string>
    <string name="login_pass_hint">password</string>
    <string name="login_button_text">Enter</string>
    <string name="text_login_name">nobody</string>

    <!--Start movie card -->
    <string name="movie_length">%1$s minutes</string>
    <string name="reviews_text">%1$s reviews</string>
    <string name="text_back_button">Leave A REVIEW</string>
    <string name="text_reservation_button">BOOK YOUR TICKET</string>
    <string name="contentdescription">contentDescription</string>
    <string name="text_actor_one">Robert Downey Jr.</string>
    <string name="text_actor_two">Chris Evans</string>
    <string name="text_actor_three">Mark Ruffalo</string>
    <string name="text_actor_four">Chris Hemsworth</string>
    <string name="head_cast">Cast</string>
    <string name="all_actors">See All</string>
    <string name="text_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="head_description">Storyline</string>
    <string name="tag_text">Action, Adventure, Drama</string>
    <string name="name_movie">Avengers: \nEnd Game</string>
    <string name="name_movie_string">Avengers: End Game</string>
    <string name="pg_text">13+</string>
    <string name="text_back">back</string>
    <string name="head_movies_list">Movies list</string>
    <string name="text_no_actor">No actor</string>
    <string name="text_description_is_empty">"Описание отсутствует"</string>
    <string name="retry_load_movies_button">повторить</string>
    <string name="text_retry_button">Обновить</string>
    <!--End movie card -->

    <string name="notification_channel_id">MovieView</string>
    <string name="name_notification_channel">New movie show</string>
    <string name="name_intent">idMovie</string>
    <string name="select_movie_name_transition">selected_movie</string>
    <string name="show_movie_name_transition">show_details_movie_name_transition</string>
    <string name="fragmentB">fragment_b</string>

</resources>