<?xml version="1.0" encoding="utf-8"?><!--
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"    >

-->

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:transitionName="trans1"
    android:id="@+id/scroll_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:transitionName="@string/show_movie_name_transition"
        android:id="@+id/constraint_movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sapphire_blue_one">

        <ProgressBar
            android:transitionName="trans2"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:transitionName="trans3"
            android:id="@+id/list_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/head_cast_text_view"
            tools:listitem="@layout/actor_item_view_holder" />

            <TextView
                android:transitionName="trans4"
                android:id="@+id/head_cast_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:text="@string/head_cast"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@id/list_actors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_text_view"
                tools:text="@string/head_cast" />

            <TextView
                android:transitionName="trans5"
                android:id="@+id/all_actors_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:alpha="0.5"
                android:text="@string/all_actors"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintBottom_toTopOf="@id/list_actors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/head_cast_text_view"
                tools:text="@string/all_actors" />

            <TextView
                android:transitionName="trans6"
                android:id="@+id/description_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_24"
                android:alpha="0.75"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@+id/head_cast_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/head_description_text_view"
                tools:text="@string/text_description" />

            <TextView
                android:transitionName="trans7"
                android:id="@+id/head_description_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_4"
                android:text="@string/head_description"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@id/description_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviews_rating_bar"
                tools:text="@string/head_description" />

            <TextView
                android:transitionName="trans8"
                android:id="@+id/reviews_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                android:textAllCaps="true"
                android:textColor="@color/pearl_blackberry"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toBottomOf="@id/reviews_rating_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/reviews_rating_bar"
                app:layout_constraintTop_toTopOf="@id/reviews_rating_bar"
                tools:text="125 REVIEWS" />
        <!--
                    android:text="@{@string/reviews_text(movie.reviews)}"
        -->

        <RatingBar
            android:transitionName="trans9"
            android:id="@+id/reviews_rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_28"
            android:numStars="5"
            android:theme="@style/MovieRatingBar"
                app:layout_constraintBottom_toTopOf="@id/head_description_text_view"
                app:layout_constraintEnd_toStartOf="@+id/reviews_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tag_text_view"
                tools:rating="4" />

            <TextView
                android:transitionName="trans10"
                android:id="@+id/tag_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:textColor="@color/radical_red"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@+id/reviews_rating_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_movie_text_view"
                tools:text="@string/tag_text" />

            <TextView
                android:transitionName="@string/fragmentB"
                android:id="@+id/name_movie_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_4"
                android:elevation="6dp"
                android:gravity="center_vertical"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="0sp"
                android:maxLines="2"
                android:textColor="@color/gainsborough"
                android:textSize="@dimen/text_size_40"
                app:layout_constraintBottom_toTopOf="@id/tag_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pg_view"
                tools:text="@string/name_movie" />

            <View
                android:transitionName="trans12"
                android:id="@+id/mask_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin_40"
                android:background="@drawable/bg_gradient_item_movie"
                android:elevation="4dp"
                app:layout_constraintBottom_toTopOf="@id/tag_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:transitionName="trans13"
                android:id="@+id/movie_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin_40"
                android:contentDescription="@string/contentdescription"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/tag_text_view"
                app:layout_constraintDimensionRatio="1.3:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:src="@drawable/ic_no_image" />

            <View
                android:transitionName="trans14"
                android:id="@+id/pg_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_154"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="@drawable/bg_corners"
                android:elevation="4dp"
                app:layout_constraintBottom_toTopOf="@id/name_movie_text_view"
                app:layout_constraintStart_toStartOf="@id/movie_image_view"
                app:layout_constraintTop_toBottomOf="@id/back_text_view" />

            <TextView
                android:transitionName="trans15"
                android:id="@+id/pg_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintBottom_toBottomOf="@id/pg_view"
                app:layout_constraintEnd_toEndOf="@id/pg_view"
                app:layout_constraintStart_toStartOf="@id/pg_view"
                app:layout_constraintTop_toTopOf="@id/pg_view"
                tools:text="@string/pg_text" />

            <ImageView
                android:transitionName="trans16"
                android:id="@+id/back_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18"
                android:layout_marginTop="@dimen/margin_60"
                android:layout_marginBottom="@dimen/margin_42"
                android:contentDescription="@string/contentdescription"
                android:elevation="4dp"
                app:layout_constraintStart_toStartOf="@id/movie_image_view"
                app:layout_constraintTop_toTopOf="@id/movie_image_view"
                app:srcCompat="@drawable/ic_navigate_before_12"
                tools:src="@drawable/ic_navigate_before_12" />

            <TextView
                android:transitionName="trans17"
                android:id="@+id/back_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:alpha="0.5"
                android:elevation="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:lineSpacingExtra="2sp"
                android:text="@string/text_back"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintBottom_toBottomOf="@id/back_image_view"
                app:layout_constraintStart_toEndOf="@id/back_image_view"
                app:layout_constraintTop_toTopOf="@id/back_image_view"
                tools:text="@string/text_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView><!--
</com.google.android.material.card.MaterialCardView>-->
